--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "axios": "^0.21.0",
     "ee-first": "^1.1.1",
     "expo": "~39.0.2",
+    "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "path-exists": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-web": "~0.13.7"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
