added picker module

--- a/app.json
+++ b/app.json
@@ -30,6 +30,6 @@
       "favicon": "./assets/favicon.png"
     },
     "description": "Simple Weather App",
-    "githubUrl": "https://github.com/leesj020925/fokin-weather.git"
+    "githubUrl": "https://github.com/leesj020925/fokin-weather"
   }
 }
